# br_god_bot

./: .env.example  .gitignore  Dockerfile  README.md  arch.drawio  baseline.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt  visualize_agents.ipynb
agents/: conversation_manager.py  graph.py  supervisor.py
agents/evgeniy_agent/: evgeniy_agent.py
agents/nodes/: classify_request.py  grade_documents.py  rewrite_query.py
agents/upload_agent/: upload_agent.py
agents/volodya_agent/: volodya_agent.py
api/: __init__.py  app.py  chat_api.py  document_loader_api.py
api/models/: __init__.py  chat.py  document.py
api/services/: __init__.py  chat_service.py  document_service.py
config/: database.py
domain/: models.py  test_suite.py
domain/models/: __init__.py  ba_document_embedding.py  document_embedding.py  document_image.py  documents_meta.py  file_embeddings.py  sa_document_embedding.py  test_suite.py
migrations/: run.sh  test_case_examples.sql
scripts/: base_document_loader.py  chat.py  init_db.py  load_ba_document.py  load_sa_document.py
services/: __init__.py  analyzer.py  document_embedder.py  document_files_store.py  document_store.py  gigachat_service.py  postprocessor.py  preprocessor.py  test_case_examples_service.py  test_suite_service.py
services/documents/: ba_document_service.py  base_document_service.py  document_meta_service.py  sa_document_service.py
services/embeddings/: __init__.py  ba_document_embedder.py  base_document_embedder.py  gigachat_embeddings.py  sa_document_embedder.py
(+12 files in other folders)
