[project]
name = "br-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiopg>=1.4.0",
    "fastapi>=0.115.8",
    "langchain>=0.3.19",
    "langchain-gigachat>=0.3.4",
    "langgraph>=0.2.74",
    "pgvector>=0.3.6",
    "pydantic>=2.10.6",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.38",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.9",
]
